Fix: Use HOMEBREW_TAP_TOKEN and fix YAML syntax

--- a/.github/workflows/update-formula.yml
+++ b/.github/workflows/update-formula.yml
@@ -10,15 +10,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
 
       - name: Update formula
         env:
           VERSION: ${{ github.event.client_payload.version }}
         run: |
           VERSION_NUM=${VERSION#v}
-
-          # Download SHA256 checksums
           BASE_URL="https://github.com/iamngoni/bitbucket-cli/releases/download/${VERSION}"
 
           DARWIN_ARM_SHA=$(curl -sL "${BASE_URL}/bb-darwin-aarch64.tar.gz.sha256" | awk '{print $1}')
@@ -28,73 +26,55 @@ jobs:
 
           mkdir -p Formula
 
-          # Generate formula
-          cat > Formula/bb.rb << 'FORMULA'
-class Bb < Formula
-  desc "Modern CLI for Bitbucket Cloud and Server/Data Center"
-  homepage "https://github.com/iamngoni/bitbucket-cli"
-FORMULA
+          cat > Formula/bb.rb << EOF
+          class Bb < Formula
+            desc "Modern CLI for Bitbucket Cloud and Server/Data Center"
+            homepage "https://github.com/iamngoni/bitbucket-cli"
+            version "${VERSION_NUM}"
+            license "MIT"
 
-          echo "  version \"${VERSION_NUM}\"" >> Formula/bb.rb
+            on_macos do
+              on_arm do
+                url "${BASE_URL}/bb-darwin-aarch64.tar.gz"
+                sha256 "${DARWIN_ARM_SHA}"
+              end
+              on_intel do
+                url "${BASE_URL}/bb-darwin-x86_64.tar.gz"
+                sha256 "${DARWIN_X64_SHA}"
+              end
+            end
 
-          cat >> Formula/bb.rb << 'FORMULA'
-  license "MIT"
+            on_linux do
+              on_arm do
+                url "${BASE_URL}/bb-linux-aarch64.tar.gz"
+                sha256 "${LINUX_ARM_SHA}"
+              end
+              on_intel do
+                url "${BASE_URL}/bb-linux-x86_64.tar.gz"
+                sha256 "${LINUX_X64_SHA}"
+              end
+            end
 
-  on_macos do
-    on_arm do
-FORMULA
+            def install
+              if OS.mac? && Hardware::CPU.arm?
+                bin.install "bb-darwin-aarch64" => "bb"
+              elsif OS.mac? && Hardware::CPU.intel?
+                bin.install "bb-darwin-x86_64" => "bb"
+              elsif OS.linux? && Hardware::CPU.arm?
+                bin.install "bb-linux-aarch64" => "bb"
+              elsif OS.linux? && Hardware::CPU.intel?
+                bin.install "bb-linux-x86_64" => "bb"
+              end
+            end
 
-          echo "      url \"https://github.com/iamngoni/bitbucket-cli/releases/download/${VERSION}/bb-darwin-aarch64.tar.gz\"" >> Formula/bb.rb
-          echo "      sha256 \"${DARWIN_ARM_SHA}\"" >> Formula/bb.rb
+            test do
+              system "#{bin}/bb", "--version"
+            end
+          end
+          EOF
 
-          cat >> Formula/bb.rb << 'FORMULA'
-    end
-    on_intel do
-FORMULA
-
-          echo "      url \"https://github.com/iamngoni/bitbucket-cli/releases/download/${VERSION}/bb-darwin-x86_64.tar.gz\"" >> Formula/bb.rb
-          echo "      sha256 \"${DARWIN_X64_SHA}\"" >> Formula/bb.rb
-
-          cat >> Formula/bb.rb << 'FORMULA'
-    end
-  end
-
-  on_linux do
-    on_arm do
-FORMULA
-
-          echo "      url \"https://github.com/iamngoni/bitbucket-cli/releases/download/${VERSION}/bb-linux-aarch64.tar.gz\"" >> Formula/bb.rb
-          echo "      sha256 \"${LINUX_ARM_SHA}\"" >> Formula/bb.rb
-
-          cat >> Formula/bb.rb << 'FORMULA'
-    end
-    on_intel do
-FORMULA
-
-          echo "      url \"https://github.com/iamngoni/bitbucket-cli/releases/download/${VERSION}/bb-linux-x86_64.tar.gz\"" >> Formula/bb.rb
-          echo "      sha256 \"${LINUX_X64_SHA}\"" >> Formula/bb.rb
-
-          cat >> Formula/bb.rb << 'FORMULA'
-    end
-  end
-
-  def install
-    if OS.mac? && Hardware::CPU.arm?
-      bin.install "bb-darwin-aarch64" => "bb"
-    elsif OS.mac? && Hardware::CPU.intel?
-      bin.install "bb-darwin-x86_64" => "bb"
-    elsif OS.linux? && Hardware::CPU.arm?
-      bin.install "bb-linux-aarch64" => "bb"
-    elsif OS.linux? && Hardware::CPU.intel?
-      bin.install "bb-linux-x86_64" => "bb"
-    end
-  end
-
-  test do
-    system "#{bin}/bb", "--version"
-  end
-end
-FORMULA
+          # Remove leading spaces from heredoc
+          sed -i 's/^          //' Formula/bb.rb
 
       - name: Commit and push
         run: |
